feat: developer inscription swagger endpoints and base schema
